--- a/community/index.html
+++ b/community/index.html
@@ -395,7 +395,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Make addthis id a variable on nottebooks page.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/286bdfa6cf...05bd19e835">12:59 2016/06/16</a></li><li>i2000s starred Ninnat/ninnat.github.io: <em></em> <a href="https://github.com/Ninnat/ninnat.github.io">12:29 2016/06/16</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 286bdfa6cf105bc075a3048af6197d5aa30b4859.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8148640026...8c35d79d5b">04:57 2016/06/03</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update schedule and progress.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/fddd03fb22...286bdfa6cf">04:51 2016/06/03</a></li><li>i2000s pushed to master at ICIQ/iciq.github.io: <em>Updating to 195abdf25ad16a491fcc32b58615032993f4db47.</em> <a href="https://github.com/ICIQ/iciq.github.io/compare/3b82eedd09...632b621dce">03:49 2016/06/03</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Secure link for all buttons.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/05bd19e835...3f2f9e7225">02:04 2016/06/16</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 05bd19e835ac77a13a2e71ee969ee89b9a6547ca.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8c35d79d5b...69e893dc3b">01:03 2016/06/16</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Make addthis id a variable on nottebooks page.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/286bdfa6cf...05bd19e835">12:59 2016/06/16</a></li><li>i2000s starred Ninnat/ninnat.github.io: <em></em> <a href="https://github.com/Ninnat/ninnat.github.io">12:29 2016/06/16</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 286bdfa6cf105bc075a3048af6197d5aa30b4859.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/8148640026...8c35d79d5b">04:57 2016/06/03</a></li></ul>
            </div>
        </div>
     </div>
@@ -429,12 +429,12 @@
                <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="/assets/img/icon-github.png" height="40px" alt="github"> </a>
                <a href="https://plus.google.com/+XiaodongQi"><img src="/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
                <a href="https://www.facebook.com/i2000s"><img src="/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="http://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
                <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
                <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
                <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
                <a href="http://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
-               <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+               <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
               </div>
               <div class="row">
                 <br><span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"> CV of Xiaodong Qi</a></span>
