--- a/pubs/Qi2011Modeling.html
+++ b/pubs/Qi2011Modeling.html
@@ -248,12 +248,12 @@ var _hmt = _hmt || [];
                <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;"><img src="/assets/img/icon-github.png" height="40px" alt="github"> </a>
                <a href="https://plus.google.com/+XiaodongQi"><img src="/assets/img/icon-gplus.png" height="40px" alt="G+"></a>
                <a href="https://www.facebook.com/i2000s"><img src="/assets/img/icon-facebook.png" height="42px" alt="facebook"></a>
-               <a href="http://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
+               <a href="https://scholar.google.com/citations?user=6FdqHlIAAAAJ&hl=en"><img src="/assets/img/icon-scholar.png" height="40px" alt="GoogleScholar"></a>
                <a href="https://twitter.com/i2000s"><img src="/assets/img/icon-twitter.png" height="45px" alt="Twitter"></a>
                <a href="https://www.linkedin.com/in/xiaodongqi"><img src="/assets/img/icon-linkedin.png" height="40px" alt="LinkedIn"></a>
                <a href="/atom.xml" onClick="recordOutboundLink(this, 'Outbound Links', 'RSS'); return false;"><img src="/assets/img/icon-rss.png" height="40px" alt="feed"></a>
                <a href="http://physics.stackexchange.com/users/37682/xiaodong-qi"><img src="/assets/img/icon-stackoverflow.png" height="40px" alt="Physics Stackexchange"></a>
-               <iframe class="github-btn" src="http://ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
+               <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
               </div>
               <div class="row">
                 <br><span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"> CV of Xiaodong Qi</a></span>
