--- a/community/index.html
+++ b/community/index.html
@@ -395,7 +395,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update more installation instruction based on the practice usage from…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/5bfcb2d154...3b585b302c">04:26 2016/06/22</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 5bfcb2d1547f4f3f7495526d0f579e51d136f62a.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/244b97de2e...571fd9bb74">02:41 2016/06/16</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update week 2 progress and plan for the next week. More places to use default security http links.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/3f2f9e7225...5bfcb2d154">02:36 2016/06/16</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 3f2f9e7225029ae9f99af1179199883b37f36814.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/69e893dc3b...244b97de2e">02:09 2016/06/16</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Secure link for all buttons.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/05bd19e835...3f2f9e7225">02:04 2016/06/16</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Minor improvement. Matlab is now working with recent nvidia GPUs.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/3b585b302c...a9734e7013">11:02 2016/06/23</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 3b585b302c89770422f9aa69c89a99562e5641aa.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/571fd9bb74...beba980359">04:31 2016/06/22</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update more installation instruction based on the practice usage from…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/5bfcb2d154...3b585b302c">04:26 2016/06/22</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 5bfcb2d1547f4f3f7495526d0f579e51d136f62a.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/244b97de2e...571fd9bb74">02:41 2016/06/16</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update week 2 progress and plan for the next week. More places to use default security http links.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/3f2f9e7225...5bfcb2d154">02:36 2016/06/16</a></li></ul>
            </div>
        </div>
     </div>
@@ -404,12 +404,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>Could computers do more on science? Focus: Computer Chooses Quantum Experiments <a href="https://t.co/iDz6HNv20o">https://t.co/iDz6HNv20o</a></p>
+                <ul><li><p>@Travis_Sch @csferrie Ref? BTW, that is a recent photo of @csferrie ? There is a difference between this photo and the old image.</p>
+ <a href="http://twitter.com/i2000s/statuses/745799830367133697">02:05 2016/06/23</a> </li><li><p>Could computers do more on science? Focus: Computer Chooses Quantum Experiments <a href="https://t.co/iDz6HNv20o">https://t.co/iDz6HNv20o</a></p>
  <a href="http://twitter.com/i2000s/statuses/707011747861897216">01:15 2016/03/08</a> </li><li><p>RT @quantum_graeme: I hope quantum computing just tunnels through the barrier.  Not sure I can take more hype than this. h/t @nickbronn htt…</p>
  <a href="http://twitter.com/i2000s/statuses/705260913251581954">05:17 2016/03/03</a> </li><li><p>RT @acidflask: #julialang accepted for Google Summer of Code 2016! <a href="https://t.co/zEvElZRHDg">https://t.co/zEvElZRHDg</a></p>
  <a href="http://twitter.com/i2000s/statuses/704545387252584449">05:54 2016/03/01</a> </li><li><p>I liked a @YouTube video from @i2000s <a href="https://t.co/ozebqxEzIV">https://t.co/ozebqxEzIV</a> Huawei Honor 5X drop test in an office environment</p>
- <a href="http://twitter.com/i2000s/statuses/703769635682918401">02:32 2016/02/28</a> </li><li><p>A simple free fall test on the Huawei Honor 5X phone for a user review. <a href="https://t.co/ozebqxEzIV">https://t.co/ozebqxEzIV</a></p>
- <a href="http://twitter.com/i2000s/statuses/703462412943499264">06:11 2016/02/27</a> </li></ul>
+ <a href="http://twitter.com/i2000s/statuses/703769635682918401">02:32 2016/02/28</a> </li></ul>
             </div>
         </div>
      </div>
