Updating to b0ea0bccceb53253d1a21237b6d3538fa793c0c1 [formerly be7159b9297ac7426e69e2bab1f24e0fa1ecf699].
Former-commit-id: e712428b29c0a474ef16372f8ed3ce5b40acd8d6

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -194,7 +194,7 @@ var _hmt = _hmt || [];
         <h2 id="visits-and-presentations">Visits and presentations</h2>
 <h3 id="up-coming">Up-coming:</h3>
 <ul>
-<li>Gordon seminar and conference (2 posters).</li>
+<li>Gordon seminar and conference from July 29th-Aug 5th (poster just passed the internal review by Sandia national labs).</li>
 </ul>
 <h3 id="selected-past-talks-and-academic-activities-while-doing-my-phd-study">Selected Past Talks and Academic Activities while doing my PhD study:</h3>
 <ul>
