--- a/research/index.html
+++ b/research/index.html
@@ -12,7 +12,9 @@
       <script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
     <meta name="subtitle" content="Do science in an open and collaborative way.">
+    
     <meta name="author" content="Xiaodong Qi | 戚晓东">
+    
 
     <!-- HTML5 metadata -->
 
@@ -62,13 +64,13 @@
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
     <!-- Le styles -->
-   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans:bold,bolditalic,italic|Quattrocento+Sans">
-   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Rosario:bold,bolditalic,italic|Rosario">
-    <!-- <link href="/assets/css/light.css" rel="stylesheet" type="text/css" id="stl" title="light">
-    <link href="/assets/css/syntax.css" rel="stylesheet" type="text/css" id="stl" title="light"> -->
+   <!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans:bold,bolditalic,italic|Quattrocento+Sans">
+   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Rosario:bold,bolditalic,italic|Rosario"> -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/quattrocento-sans" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/rosario" type="text/css"/>
+
     <!-- bootstrap style -->
-    <!-- <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"/> -->
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href = "/assets/css/bootstrap.min.css" rel = "stylesheet">
     <!-- Self-defined style -->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
@@ -215,7 +217,6 @@ Fig 1. Polarization spectroscopy on an optical nanofiber coupled atomic ensemble
 <li><a href="http://w3.arizona.edu/~lascool/">Dr. Poul Jessen’s Quantum Information and Control Group</a> (experimental)–mainly with group member <a href="http://www.optics.arizona.edu/academics/students/profile/david-melchior">David Melchior</a>), from the University of Arizona (College of Optical Sciences and an established node of <a href="http://cquic.org">CQuIC</a>).</li>
 <li><a href="http://physics.unm.edu/pandaweb/people/person.php?personID=1276">Dr. Yuan-Yu Jau</a> and <a href="http://physics.unm.edu/pandaweb/people/person.php?personID=971">Grant Biedermann</a>’s experimental group from the <a href="http://www.sandia.gov/mstc/quantum/index.html">Sandia National Labs on Quantum Systems</a>.</li>
 <li><a href="http://www.physics.umd.edu/rgroups/amo/orozco/">Dr. Luis A. Orozco’s Quantum Optics and Francium Spectroscopy group</a> (experimental)–mainly with group member <a href="http://jqi.umd.edu/people/pablo-solano">Pablo Solano</a> and his fellows, from the <a href="http://jqi.umd.edu/">Joint Quantum Institute</a>, University of Maryland.</li>
-<li>[Dr. Nan Li] from the <a href="http://english.amss.cas.cn/">Academy of Mathematics and Systems Science</a>, Chinese Academy of Sciences.</li>
 </ul>
 <div class="references">
 
@@ -280,8 +281,9 @@ Fig 1. Polarization spectroscopy on an optical nanofiber coupled atomic ensemble
     ================================================== -->
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <!-- JQuery, used on a few pages -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>
+    <!-- JQuery, used on a few pages as well as Bootstrap's Javascript plugins -->
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>-->
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
     <script src="/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
@@ -343,7 +345,7 @@ Fig 1. Polarization spectroscopy on an optical nanofiber coupled atomic ensemble
     <script src="http://i2000s.github.io/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src = "https://code.jquery.com/jquery.js"></script>
+    <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src = "/assets/js/bootstrap.min.js"></script>
