--- a/noteblog.html
+++ b/noteblog.html
@@ -1,4 +1,12 @@
-<!DOCTYPE html>
+
+---
+layout: default
+---
+
+<div class="row">
+  <div class="col-md-7 col-sm-12">
+    <article>
+    <!DOCTYPE html>
 <html lang="en">
 
   <head>
@@ -11,7 +19,9 @@
       <script src = "https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
       <![endif]-->
     <meta name="subtitle" content="My open science notebook and blog">
+    
     <meta name="author" content="Xiaodong Qi | 戚晓东">
+    
 
     <!-- HTML5 metadata -->
 
@@ -61,13 +71,13 @@
 <meta name="baidu-site-verification" content="cAv3dLIDps" />
 
     <!-- Le styles -->
-   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans:bold,bolditalic,italic|Quattrocento+Sans">
-   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Rosario:bold,bolditalic,italic|Rosario">
-    <!-- <link href="/assets/css/light.css" rel="stylesheet" type="text/css" id="stl" title="light">
-    <link href="/assets/css/syntax.css" rel="stylesheet" type="text/css" id="stl" title="light"> -->
+   <!--<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Quattrocento+Sans:bold,bolditalic,italic|Quattrocento+Sans">
+   <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Rosario:bold,bolditalic,italic|Rosario"> -->
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/quattrocento-sans" type="text/css"/>
+    <link rel="stylesheet" media="screen" href="https://fontlibrary.org/face/rosario" type="text/css"/>
+
     <!-- bootstrap style -->
-    <!-- <link href="/assets/css/bootstrap.min.css" rel="stylesheet" type="text/css"/> -->
-    <link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+    <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css">
     <link href = "/assets/css/bootstrap.min.css" rel = "stylesheet">
     <!-- Self-defined style -->
     <link rel="stylesheet" type="text/css" href="/assets/css/style.css">
@@ -295,7 +305,7 @@ While optical fibers have been used for primary quantum communications, atom-fib
             <hr>
             <h4> <a href="https://github.com/i2000s" onClick="recordOutboundLink(this, 'Outbound Links', 'Github'); return false;" >
               <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> What I'm Coding </a></h4>
-            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Add content source. Update Gordon conference attending info -- I can go on time.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/fd4fcac2ee...be7159b929">05:09 2016/07/24</a></li><li>i2000s commented on pull request JuliaQuantum/Resources#4: <em>Don't forget to delete this paragraph as I have commented earlier. I think it's repeating and over-shooting. Thanks.</em> <a href="https://github.com/JuliaQuantum/Resources/pull/4#discussion_r71981925">05:04 2016/07/24</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to fd4fcac2ee83d43d598455fc82f61ae25c8dbb55.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/1c5513f65c...6f02704d94">04:23 2016/07/24</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update July notes, part I only.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/a925b71469...fd4fcac2ee">04:18 2016/07/24</a></li></ul>
+            <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix the modification date problem for Jekyll 3. See cboettig/labnoteb…</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/b5eeeea807...dcf562a40e">08:30 2016/07/24</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Fix the modification date problem for Jekyll 3. See cboettig/labnoteb… Reformate the tags page.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/be7159b929...b5eeeea807">08:28 2016/07/24</a></li><li>i2000s commented on issue cboettig/labnotebook#125: <em>Sorry, just found another related error and didn't bother to make a PR. In the sidebar code again, the section to show the modification time should…</em> <a href="https://github.com/cboettig/labnotebook/issues/125#issuecomment-234764483">08:19 2016/07/24</a></li><li>i2000s deleted branch Jekyll3 at i2000s/i2000s.github.io: <em></em> <a href="https://github.com/">05:25 2016/07/24</a></li></ul>
           </div>
 
          </div>
@@ -904,8 +914,9 @@ git add project_file2
     ================================================== -->
 
     <!-- Placed at the end of the document so the pages load faster -->
-    <!-- JQuery, used on a few pages -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>
+    <!-- JQuery, used on a few pages as well as Bootstrap's Javascript plugins -->
+    <!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js" ></script>-->
+    <script src="//ajax.aspnetcdn.com/ajax/jQuery/jquery-3.1.0.min.js"></script>
     <script src="//cdn.jsdelivr.net/jquery.mixitup/latest/jquery.mixitup.min.js"></script>
     <script src="/assets/js/mixitup-mine.js"></script>
     <!-- Equations using MathJax -->
@@ -967,7 +978,7 @@ git add project_file2
     <script src="http://i2000s.github.io/assets/js/application.js"></script>
     -->
     <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-    <script src = "https://code.jquery.com/jquery.js"></script>
+    <!--<script src = "https://code.jquery.com/jquery.js"></script>-->
 
     <!-- Include all compiled plugins (below), or include individual files as needed -->
     <script src = "/assets/js/bootstrap.min.js"></script>
@@ -975,3 +986,7 @@ git add project_file2
   </body>
 </html>
 
+
+    </article>
+  </div>
+</div>
