--- a/tags.html
+++ b/tags.html
@@ -2209,70 +2209,70 @@ var _hmt = _hmt || [];
         -->
           <div class='cloud'>
             <h1> Tag Cloud</h1>
-            <a style='font-size: 70%' href='/tags.html#matplotlib'>matplotlib</a>
-<a style='font-size: 130%' href='/tags.html#numerical-analysis'>numerical-analysis</a>
-<a style='font-size: 70%' href='/tags.html#bibliographic-reference-management'>bibliographic-reference-management</a>
-<a style='font-size: 70%' href='/tags.html#Jekyll'>Jekyll</a>
-<a style='font-size: 100%' href='/tags.html#science'>science</a>
-<a style='font-size: 155%' href='/tags.html#open-science'>open-science</a>
-<a style='font-size: 70%' href='/tags.html#linux'>linux</a>
-<a style='font-size: 70%' href='/tags.html#mendeley'>mendeley</a>
-<a style='font-size: 140%' href='/tags.html#testing'>testing</a>
-<a style='font-size: 70%' href='/tags.html#poster'>poster</a>
-<a style='font-size: 70%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
-<a style='font-size: 100%' href='/tags.html#advection'>advection</a>
-<a style='font-size: 130%' href='/tags.html#documentation'>documentation</a>
-<a style='font-size: 100%' href='/tags.html#conference'>conference</a>
-<a style='font-size: 170%' href='/tags.html#python'>python</a>
-<a style='font-size: 70%' href='/tags.html#HTML'>HTML</a>
-<a style='font-size: 70%' href='/tags.html#heterogeneous-media'>heterogeneous-media</a>
-<a style='font-size: 70%' href='/tags.html#nanofiber'>nanofiber</a>
-<a style='font-size: 118%' href='/tags.html#reproducible-research'>reproducible-research</a>
-<a style='font-size: 70%' href='/tags.html#RK-Opt'>RK-Opt</a>
-<a style='font-size: 130%' href='/tags.html#hyperbolic-PDEs'>hyperbolic-PDEs</a>
-<a style='font-size: 130%' href='/tags.html#open-access'>open-access</a>
-<a style='font-size: 130%' href='/tags.html#reproducibility'>reproducibility</a>
-<a style='font-size: 70%' href='/tags.html#petsc'>petsc</a>
-<a style='font-size: 70%' href='/tags.html#paper-review'>paper-review</a>
-<a style='font-size: 100%' href='/tags.html#git'>git</a>
-<a style='font-size: 118%' href='/tags.html#teaching'>teaching</a>
-<a style='font-size: 70%' href='/tags.html#shocks'>shocks</a>
+            <a style='font-size: 100%' href='/tags.html#wave-equation'>wave-equation</a>
+<a style='font-size: 118%' href='/tags.html#version-control'>version-control</a>
 <a style='font-size: 70%' href='/tags.html#profiling'>profiling</a>
-<a style='font-size: 70%' href='/tags.html#sagemathcloud'>sagemathcloud</a>
-<a style='font-size: 70%' href='/tags.html#programming'>programming</a>
-<a style='font-size: 70%' href='/tags.html#Julia'>Julia</a>
-<a style='font-size: 100%' href='/tags.html#matlab'>matlab</a>
-<a style='font-size: 70%' href='/tags.html#research'>research</a>
-<a style='font-size: 70%' href='/tags.html#roundoff'>roundoff</a>
-<a style='font-size: 70%' href='/tags.html#quantum optics'>quantum optics</a>
-<a style='font-size: 100%' href='/tags.html#pyclaw'>pyclaw</a>
-<a style='font-size: 70%' href='/tags.html#collaboration'>collaboration</a>
-<a style='font-size: 118%' href='/tags.html#Runge-Kutta-methods'>Runge-Kutta-methods</a>
-<a style='font-size: 100%' href='/tags.html#wave-equation'>wave-equation</a>
 <a style='font-size: 118%' href='/tags.html#mathematical-exposition'>mathematical-exposition</a>
+<a style='font-size: 70%' href='/tags.html#paper-review'>paper-review</a>
+<a style='font-size: 70%' href='/tags.html#heterogeneous-media'>heterogeneous-media</a>
+<a style='font-size: 118%' href='/tags.html#teaching'>teaching</a>
+<a style='font-size: 118%' href='/tags.html#reproducible-research'>reproducible-research</a>
+<a style='font-size: 100%' href='/tags.html#stability'>stability</a>
+<a style='font-size: 100%' href='/tags.html#advection'>advection</a>
+<a style='font-size: 100%' href='/tags.html#presentation'>presentation</a>
+<a style='font-size: 130%' href='/tags.html#scientific-publishing'>scientific-publishing</a>
+<a style='font-size: 100%' href='/tags.html#CFL-condition'>CFL-condition</a>
+<a style='font-size: 70%' href='/tags.html#poster'>poster</a>
+<a style='font-size: 70%' href='/tags.html#summer study'>summer study</a>
+<a style='font-size: 70%' href='/tags.html#quantum optics'>quantum optics</a>
+<a style='font-size: 130%' href='/tags.html#reproducibility'>reproducibility</a>
+<a style='font-size: 70%' href='/tags.html#mendeley'>mendeley</a>
+<a style='font-size: 100%' href='/tags.html#matlab'>matlab</a>
+<a style='font-size: 70%' href='/tags.html#scientific-computing'>scientific-computing</a>
+<a style='font-size: 70%' href='/tags.html#research'>research</a>
+<a style='font-size: 100%' href='/tags.html#git'>git</a>
+<a style='font-size: 70%' href='/tags.html#collaboration'>collaboration</a>
+<a style='font-size: 70%' href='/tags.html#bibliographic-reference-management'>bibliographic-reference-management</a>
+<a style='font-size: 70%' href='/tags.html#SSP'>SSP</a>
+<a style='font-size: 140%' href='/tags.html#testing'>testing</a>
+<a style='font-size: 100%' href='/tags.html#conference'>conference</a>
+<a style='font-size: 70%' href='/tags.html#blog-post'>blog-post</a>
+<a style='font-size: 155%' href='/tags.html#open-science'>open-science</a>
+<a style='font-size: 100%' href='/tags.html#pyclaw'>pyclaw</a>
+<a style='font-size: 118%' href='/tags.html#ipython'>ipython</a>
+<a style='font-size: 70%' href='/tags.html#sagemathcloud'>sagemathcloud</a>
+<a style='font-size: 70%' href='/tags.html#quantum dynamics'>quantum dynamics</a>
+<a style='font-size: 70%' href='/tags.html#scientific-reading'>scientific-reading</a>
+<a style='font-size: 70%' href='/tags.html#CSS'>CSS</a>
+<a style='font-size: 70%' href='/tags.html#Julia'>Julia</a>
+<a style='font-size: 100%' href='/tags.html#PDE'>PDE</a>
+<a style='font-size: 70%' href='/tags.html#nanofiber'>nanofiber</a>
+<a style='font-size: 70%' href='/tags.html#RK-Opt'>RK-Opt</a>
+<a style='font-size: 70%' href='/tags.html#linux'>linux</a>
 <a style='font-size: 100%' href='/tags.html#arXiv'>arXiv</a>
+<a style='font-size: 70%' href='/tags.html#knitr'>knitr</a>
+<a style='font-size: 130%' href='/tags.html#numerical-analysis'>numerical-analysis</a>
+<a style='font-size: 70%' href='/tags.html#shocks'>shocks</a>
+<a style='font-size: 118%' href='/tags.html#Runge-Kutta-methods'>Runge-Kutta-methods</a>
+<a style='font-size: 130%' href='/tags.html#documentation'>documentation</a>
+<a style='font-size: 130%' href='/tags.html#open-access'>open-access</a>
+<a style='font-size: 70%' href='/tags.html#academia'>academia</a>
+<a style='font-size: 100%' href='/tags.html#software-distribution'>software-distribution</a>
+<a style='font-size: 130%' href='/tags.html#hyperbolic-PDEs'>hyperbolic-PDEs</a>
+<a style='font-size: 70%' href='/tags.html#programming'>programming</a>
+<a style='font-size: 70%' href='/tags.html#software'>software</a>
+<a style='font-size: 130%' href='/tags.html#publications'>publications</a>
+<a style='font-size: 70%' href='/tags.html#petsc'>petsc</a>
+<a style='font-size: 70%' href='/tags.html#automation'>automation</a>
+<a style='font-size: 170%' href='/tags.html#python'>python</a>
+<a style='font-size: 70%' href='/tags.html#matplotlib'>matplotlib</a>
+<a style='font-size: 70%' href='/tags.html#stackexchange'>stackexchange</a>
+<a style='font-size: 70%' href='/tags.html#roundoff'>roundoff</a>
+<a style='font-size: 100%' href='/tags.html#science'>science</a>
+<a style='font-size: 70%' href='/tags.html#Jekyll'>Jekyll</a>
+<a style='font-size: 70%' href='/tags.html#HTML'>HTML</a>
 <a style='font-size: 70%' href='/tags.html#memory'>memory</a>
 <a style='font-size: 70%' href='/tags.html#Jupyter'>Jupyter</a>
-<a style='font-size: 118%' href='/tags.html#version-control'>version-control</a>
-<a style='font-size: 70%' href='/tags.html#scientific-reading'>scientific-reading</a>
-<a style='font-size: 70%' href='/tags.html#automation'>automation</a>
-<a style='font-size: 70%' href='/tags.html#CSS'>CSS</a>
-<a style='font-size: 100%' href='/tags.html#PDE'>PDE</a>
-<a style='font-size: 100%' href='/tags.html#CFL-condition'>CFL-condition</a>
-<a style='font-size: 70%' href='/tags.html#stackexchange'>stackexchange</a>
-<a style='font-size: 70%' href='/tags.html#knitr'>knitr</a>
-<a style='font-size: 70%' href='/tags.html#software'>software</a>
-<a style='font-size: 118%' href='/tags.html#ipython'>ipython</a>
-<a style='font-size: 70%' href='/tags.html#scientific-computing'>scientific-computing</a>
-<a style='font-size: 70%' href='/tags.html#blog-post'>blog-post</a>
-<a style='font-size: 100%' href='/tags.html#presentation'>presentation</a>
-<a style='font-size: 70%' href='/tags.html#academia'>academia</a>
-<a style='font-size: 130%' href='/tags.html#publications'>publications</a>
-<a style='font-size: 100%' href='/tags.html#software-distribution'>software-distribution</a>
-<a style='font-size: 70%' href='/tags.html#summer study'>summer study</a>
-<a style='font-size: 100%' href='/tags.html#stability'>stability</a>
-<a style='font-size: 70%' href='/tags.html#SSP'>SSP</a>
-<a style='font-size: 130%' href='/tags.html#scientific-publishing'>scientific-publishing</a>
 
           </div>
 
@@ -2300,7 +2300,11 @@ var _hmt = _hmt || [];
                <iframe class="github-btn" src="//ghbtns.com/github-btn.html?user=i2000s&repo=i2000s.github.io&type=star&count=true&size=large" allowtransparency="true" frameborder="0" scrolling="0" width="150px" height="40px" style="vertical-align:middle; margin-top:9px;"></iframe>
               </div>
               <div class="row">
-                <br><span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"> CV of Xiaodong Qi</a></span>
+                <span> &nbsp; </span> <span><a href="/CV-XiaodongQi.pdf"
+                  onclick="var that=this;
+                  _gaq.push(['_trackEvent','Download','PDF',this.href]);
+                  setTimeout(function(){location.href=that.href;},200);
+                  return false;" class = "btn btn-default"><i class="fa fa-file-text-o fa-1x"></i> CV of Xiaodong Qi</a></span>
                 <br><img alt="Creative Commons License" style="border-width:0" align="right" src="https://licensebuttons.net/l/by/3.0/88x31.png" />
                 <span xmlns:dct="http://purl.org/dc/terms/" property="dct:title">Content</span> is licensed under the
                 <a rel="license" href="https://creativecommons.org/licenses/by/4.0/">Creative Commons Attribution License</a> or otherwise specified.
