Updating to 029a2be3cad012dac8f2676e8c686680461c53cc.

--- a/community/index.html
+++ b/community/index.html
@@ -393,7 +393,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>More outlines.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/6751ca4bfe...4c84052435">01:51 2016/07/30</a></li><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 6751ca4bfebdb789ce18be9432e515fb9321e78c.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/935c5a447f...029340d381">04:20 2016/07/29</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Outline more.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/b96f1012f0...6751ca4bfe">04:15 2016/07/29</a></li><li>i2000s made i2000s/qcircuit-tikz public: <em></em> <a href="https://github.com/i2000s/qcircuit-tikz">11:22 2016/07/28</a></li><li>i2000s starred i2000s/NanofiberPaper2014: <em></em> <a href="https://github.com/i2000s/NanofiberPaper2014">11:20 2016/07/28</a></li></ul>
+                <ul><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update links to GRC/GRS.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/029a2be3ca...ea32b5957c">07:49 2016/09/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update talks and conferences.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/4c84052435...029a2be3ca">07:47 2016/09/07</a></li><li>i2000s opened issue CQuIC/qcircuit#23: <em>Migrating the old Qcircuit page on the UNM physics server</em> <a href="https://github.com/CQuIC/qcircuit/issues/23">05:59 2016/08/30</a></li><li>i2000s commented on issue monperrus/bibtexbrowser#47: <em>I haven't fully tested it yet, but just a side comment here: when opening links in the frameset, it seems some URLs may not work. For my case, the …</em> <a href="https://github.com/monperrus/bibtexbrowser/issues/47#issuecomment-242566758">10:39 2016/08/25</a></li><li>i2000s pushed to Ben at i2000s/NanofiberPaper2014: <em>Fix a line ending. Use markdown for rendering.</em> <a href="https://github.com/i2000s/NanofiberPaper2014/compare/1e8e64b235...97335ed727">01:53 2016/08/24</a></li></ul>
            </div>
        </div>
     </div>
@@ -402,12 +402,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>I added a video to a @YouTube playlist <a href="https://t.co/9XhA3aXwt4">https://t.co/9XhA3aXwt4</a> Apocalypto (2006) English Subtitles - Gerardo Taracena, Raoul Max</p>
- <a href="http://twitter.com/i2000s/statuses/749659039223734274">05:40 2016/07/03</a> </li><li><p>@Travis_Sch @csferrie Ref? BTW, that is a recent photo of @csferrie ? There is a difference between this photo and the old image.</p>
- <a href="http://twitter.com/i2000s/statuses/745799830367133697">02:05 2016/06/23</a> </li><li><p>Could computers do more on science? Focus: Computer Chooses Quantum Experiments <a href="https://t.co/iDz6HNv20o">https://t.co/iDz6HNv20o</a></p>
- <a href="http://twitter.com/i2000s/statuses/707011747861897216">01:15 2016/03/08</a> </li><li><p>RT @quantum_graeme: I hope quantum computing just tunnels through the barrier.  Not sure I can take more hype than this. h/t @nickbronn htt…</p>
- <a href="http://twitter.com/i2000s/statuses/705260913251581954">05:17 2016/03/03</a> </li><li><p>RT @acidflask: #julialang accepted for Google Summer of Code 2016! <a href="https://t.co/zEvElZRHDg">https://t.co/zEvElZRHDg</a></p>
- <a href="http://twitter.com/i2000s/statuses/704545387252584449">05:54 2016/03/01</a> </li></ul>
+                <ul><li><p>I liked a @YouTube video <a href="https://t.co/O05Nwu7KM9">https://t.co/O05Nwu7KM9</a> 英国小哥为G20拍了部片子 想明白了“中国桥”【British guy</p>
+ <a href="http://twitter.com/i2000s/statuses/772927050365734914">10:39 2016/09/05</a> </li><li><p>Carlton Caves recommended to read <a href="https://t.co/WCht2KNkDm">https://t.co/WCht2KNkDm</a> for gravitational wave detection :)</p>
+ <a href="http://twitter.com/i2000s/statuses/768947784233865216">11:06 2016/08/25</a> </li><li><p>China launches world&#39;s first quantum science satellite <a href="https://t.co/xA17xNTLJ5">https://t.co/xA17xNTLJ5</a></p>
+ <a href="http://twitter.com/i2000s/statuses/766031995851923457">10:00 2016/08/17</a> </li><li><p>@omgubuntu @ubuntu @ubuntutouch @UbuntuTouchOS Link to vote up: <a href="https://t.co/KP3n65KVwp">https://t.co/KP3n65KVwp</a></p>
+ <a href="http://twitter.com/i2000s/statuses/765417189935423489">05:17 2016/08/16</a> </li><li><p>I did a Bid To Get ZTE to Make an Ubuntu Phone <a href="https://t.co/bv9aVThF1t">https://t.co/bv9aVThF1t</a> via @omgubuntu @ubuntu @ubuntutouch @ubuntutouchos</p>
+ <a href="http://twitter.com/i2000s/statuses/765414252635009024">05:05 2016/08/16</a> </li></ul>
             </div>
         </div>
      </div>
