--- a/pubs/index.html
+++ b/pubs/index.html
@@ -196,20 +196,22 @@ var _hmt = _hmt || [];
         <h2 id="visits-and-presentations">Visits and presentations</h2>
 <h3 id="up-coming">Up-coming:</h3>
 <ul>
-<li>Gordon seminar and conference from July 29th-Aug 5th (poster just passed the internal review by Sandia national labs).</li>
+<li>PhD post-candidate annual talk has been scheduled on Nov 16th, 2016.</li>
 </ul>
 <h3 id="selected-past-talks-and-academic-activities-while-doing-my-phd-study">Selected Past Talks and Academic Activities while doing my PhD study:</h3>
 <ul>
+<li>July 31-Aug 5, 2016: Gordon Research Conference – Quantum Entanglement, New States of Matter, and Correlated Dynamics, Easton, MA, USA. (poster)</li>
+<li>July 30-31, 2016: Gordon Research Seminar – Quantum Simulation, Entanglement and Dynamics of Condensed Matter Systems and Field Theories, Easton, MA, USA. (poster)</li>
 <li>Feb 18-20, 2016: 18th annual SQuInT workshop, Albuquerque, NM, USA. (poster)</li>
-<li>Dec 29-30, 2015: Acadamic visit and a Seminar talk in IPhy, CAS @ Beijing, China.</li>
+<li>Dec 29-30, 2015: Academic visit and a Seminar talk in IPhy, CAS @ Beijing, China.</li>
 <li>Dec 25-26, 2015: Academic visit and a Seminar talk in Hefei National Lab of Microscale Matter Physics, USTC @ Hefei, China.</li>
-<li>Dec 25, 2015: JuliaQuantum and software ecosystem in the perpective of quantum information science, public talk in USTC.</li>
-<li>Dec 23-24, 2015: Academic visit and a Seminar talk in the Key Laboratory of Quantum Information, USTC @ Heifei, China.</li>
+<li>Dec 25, 2015: JuliaQuantum and software ecosystem in the perspective of quantum information science, public talk in USTC.</li>
+<li>Dec 23-24, 2015: Academic visit and a Seminar talk in the Key Laboratory of Quantum Information, USTC @ Hefei, China.</li>
 <li>Nov 27-Dec 2 and Dec 29-31, 2015: Academic visit and a Seminar talk on Strong dispersive response of atoms trapped near to an optical nanofiber, AMSS, CAS @ Beijing, China.</li>
-<li>Sep 29, 2015: Anual research report, CQuIC @ Albuquerque, NM, USA.</li>
+<li>Sep 29, 2015: Annual research report, CQuIC @ Albuquerque, NM, USA.</li>
 <li>June 10, 2015: DAMOP oral presentation @ Columbus, OH, USA.</li>
 <li>May 12-15, 2015: Retreat research presentation with collaborators from UofA and Sandia National Labs @ Flagstaff, AZ, USA.</li>
-<li>Feb 21, 2015: JuliaMeetup openning up talk @ Berkeley, CA, USA.</li>
+<li>Feb 21, 2015: JuliaMeetup opening up talk @ Berkeley, CA, USA.</li>
 <li>Feb 18-21, 2015: Poster presentation at the 17th SQuInT workshop, Berkeley, CA, USA.</li>
 <li>Oct, 1, 2014: PhD Candidate exam presentation, Department of physics and astronomy, UNM @ Albuquerque, NM, USA.</li>
 <li>July 27-July 1: Poster presentation, Gordon Research Workshop on Quantum Science, Easton, MI, USA.</li>
