Updating to ea32b5957c773b2a513ab55be669086ee04534de.

--- a/pubs/index.html
+++ b/pubs/index.html
@@ -200,8 +200,8 @@ var _hmt = _hmt || [];
 </ul>
 <h3 id="selected-past-talks-and-academic-activities-while-doing-my-phd-study">Selected Past Talks and Academic Activities while doing my PhD study:</h3>
 <ul>
-<li>July 31-Aug 5, 2016: Gordon Research Conference – Quantum Entanglement, New States of Matter, and Correlated Dynamics, Easton, MA, USA. (poster)</li>
-<li>July 30-31, 2016: Gordon Research Seminar – Quantum Simulation, Entanglement and Dynamics of Condensed Matter Systems and Field Theories, Easton, MA, USA. (poster)</li>
+<li>July 31-Aug 5, 2016: <a href="https://www.grc.org/programs.aspx?id=14962">Gordon Research Conference – Quantum Entanglement, New States of Matter, and Correlated Dynamics</a>, Easton, MA, USA. (poster)</li>
+<li>July 30-31, 2016: <a href="https://www.grc.org/programs.aspx?id=16636">Gordon Research Seminar – Quantum Simulation, Entanglement and Dynamics of Condensed Matter Systems and Field Theories</a>, Easton, MA, USA. (poster)</li>
 <li>Feb 18-20, 2016: 18th annual SQuInT workshop, Albuquerque, NM, USA. (poster)</li>
 <li>Dec 29-30, 2015: Academic visit and a Seminar talk in IPhy, CAS @ Beijing, China.</li>
 <li>Dec 25-26, 2015: Academic visit and a Seminar talk in Hefei National Lab of Microscale Matter Physics, USTC @ Hefei, China.</li>
