Updating to a5ce8f203ab0ad59f9b5e548484ad02c1e724e13.

--- a/community/index.html
+++ b/community/index.html
@@ -393,7 +393,7 @@
       <img src="http://i2000s.github.io/assets/img/icon-github.png" alt="github"> Coding </a></h4>
        <div class="excerpt" height="300px">
            <div class="scroll">
-                <ul><li>i2000s pushed to master at i2000s/i2000s.github.io: <em>Updating to 029a2be3cad012dac8f2676e8c686680461c53cc.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/1bcd12d514...df0dcea61d">07:52 2016/09/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update links to GRC/GRS.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/029a2be3ca...ea32b5957c">07:49 2016/09/07</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Update talks and conferences.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/4c84052435...029a2be3ca">07:47 2016/09/07</a></li><li>i2000s opened issue CQuIC/qcircuit#23: <em>Migrating the old Qcircuit page on the UNM physics server</em> <a href="https://github.com/CQuIC/qcircuit/issues/23">05:59 2016/08/30</a></li><li>i2000s commented on issue monperrus/bibtexbrowser#47: <em>I haven't fully tested it yet, but just a side comment here: when opening links in the frameset, it seems some URLs may not work. For my case, the …</em> <a href="https://github.com/monperrus/bibtexbrowser/issues/47#issuecomment-242566758">10:39 2016/08/25</a></li></ul>
+                <ul><li>i2000s starred CQuIC/NanofiberPaper2014: <em></em> <a href="https://github.com/CQuIC/NanofiberPaper2014">12:16 2016/09/09</a></li><li>i2000s pushed to dev at i2000s/i2000s.github.io: <em>Use github release channel for downloads.</em> <a href="https://github.com/i2000s/i2000s.github.io/compare/ea32b5957c...a5ce8f203a">12:15 2016/09/09</a></li><li>i2000s created tag 1.0 at i2000s/NanofiberPaper2014: <em></em> <a href="https://github.com/i2000s/NanofiberPaper2014/tree/1.0">12:06 2016/09/09</a></li><li>i2000s released Published on PRA 93, 023817 (2016). at i2000s/NanofiberPaper2014: <em></em> <a href="https://github.com/i2000s/NanofiberPaper2014/releases/tag/1.0">12:06 2016/09/09</a></li><li>i2000s created tag 1.0 at CQuIC/NanofiberPaper2014: <em></em> <a href="https://github.com/CQuIC/NanofiberPaper2014/tree/1.0">12:05 2016/09/09</a></li></ul>
            </div>
        </div>
     </div>
@@ -402,12 +402,12 @@
         <h4><a property="account" href="https://twitter.com/i2000s" onclick="recordOutboundLink(this, 'Outbound Links', 'Twitter'); return false;"><img src="/assets/img/icon-twitter.png" height=45px alt="Twitter"> Discussing </a></h4>
         <div class="excerpt" height="300px">
             <div class="scroll">
-                <ul><li><p>I liked a @YouTube video <a href="https://t.co/O05Nwu7KM9">https://t.co/O05Nwu7KM9</a> 英国小哥为G20拍了部片子 想明白了“中国桥”【British guy</p>
+                <ul><li><p>PandA Event: <a href="https://t.co/T22KPXkcDc">https://t.co/T22KPXkcDc</a> via @UNMpanda</p>
+ <a href="http://twitter.com/i2000s/statuses/773992855186513920">09:14 2016/09/08</a> </li><li><p>I liked a @YouTube video <a href="https://t.co/O05Nwu7KM9">https://t.co/O05Nwu7KM9</a> 英国小哥为G20拍了部片子 想明白了“中国桥”【British guy</p>
  <a href="http://twitter.com/i2000s/statuses/772927050365734914">10:39 2016/09/05</a> </li><li><p>Carlton Caves recommended to read <a href="https://t.co/WCht2KNkDm">https://t.co/WCht2KNkDm</a> for gravitational wave detection :)</p>
  <a href="http://twitter.com/i2000s/statuses/768947784233865216">11:06 2016/08/25</a> </li><li><p>China launches world&#39;s first quantum science satellite <a href="https://t.co/xA17xNTLJ5">https://t.co/xA17xNTLJ5</a></p>
  <a href="http://twitter.com/i2000s/statuses/766031995851923457">10:00 2016/08/17</a> </li><li><p>@omgubuntu @ubuntu @ubuntutouch @UbuntuTouchOS Link to vote up: <a href="https://t.co/KP3n65KVwp">https://t.co/KP3n65KVwp</a></p>
- <a href="http://twitter.com/i2000s/statuses/765417189935423489">05:17 2016/08/16</a> </li><li><p>I did a Bid To Get ZTE to Make an Ubuntu Phone <a href="https://t.co/bv9aVThF1t">https://t.co/bv9aVThF1t</a> via @omgubuntu @ubuntu @ubuntutouch @ubuntutouchos</p>
- <a href="http://twitter.com/i2000s/statuses/765414252635009024">05:05 2016/08/16</a> </li></ul>
+ <a href="http://twitter.com/i2000s/statuses/765417189935423489">05:17 2016/08/16</a> </li></ul>
             </div>
         </div>
      </div>
