--- a/pubs/index.html
+++ b/pubs/index.html
@@ -238,7 +238,7 @@ var _hmt = _hmt || [];
 <a data-toggle="collapse" href="#Qi2016Dispersive-bibtex">BibTeX</a>
 </li>
  <li>
-<a href="/assets/papers/Qi2016.pdf" target="_blank">Download</a>
+<a href="https://github.com/CQuIC/NanofiberPaper2014/releases" target="_blank">Download</a>
 </li> 
  <li>
 <a href="http://dx.doi.org/10.1103/PhysRevA.93.023817" target="_blank">Link</a>
@@ -268,7 +268,7 @@ We study the strong coupling between photons and atoms that can be achieved in a
   volume = {93},
   arxiv = {1509.02625 },
   doi = {10.1103/PhysRevA.93.023817},
-  file = {/assets/papers/Qi2016.pdf},
+  file = {https://github.com/CQuIC/NanofiberPaper2014/releases},
   repo = {https://github.com/CQuIC/NanofiberPaper2014},
   grantnumber = {AFOSR-Y600242,NSF-PHY-1212445, NSF-PHY-1307520},
   gsid = {14591647056169599678},
